fix: extra space in search results Fix #232

--- a/src/components/search/ComboResults/comboResults.module.scss
+++ b/src/components/search/ComboResults/comboResults.module.scss
@@ -14,7 +14,7 @@
       @apply m-2;
     }
 
-    .comboResult:nth-child(3n + 3) {
+    .comboResult:nth-child(3n + 3), .comboResult:last {
       @apply mr-0;
     }
 
